get collection api
